# 2PC-TTRUTH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cost.txt  cost_cal.py  main.cpp  poly.py  test.cpp  test.h
answer_grading/: dp.py  pretrained_vec  word2vec_model
answer_grading/keywords/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+47 more)
answer_grading/legacy/: legacy.py
common/: mpc_util.cpp  mpc_util.h
mpc_ttruth/: mpc_ttruth.cpp  mpc_ttruth.h
ttruth/: ttruth.cpp  ttruth.h
